# pytest-isolated

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: scheduled-tests.yml  test.yml  update-pre-commit.yml
docs/: incompatible-options.md  pytest-forked-migration.md
examples/: test_example.py
src/pytest_isolated/: __init__.py  config.py  execution.py  grouping.py  plugin.py  reporting.py  utils.py
tests/: __init__.py  conftest.py  test_app_isolation.py  test_basic.py  test_execution.py  test_execution_units.py  test_filtering.py  test_filtering_options.py  test_grouping.py  test_k_filtering.py  test_options.py  test_plugin.py  test_plugin_compatibility.py  test_plugin_integration.py  test_reporting.py  test_windows_issues.py
