[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-isolated"
dynamic = ["version"]
description = "Run marked pytest tests in grouped subprocesses (cross-platform)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["pytest>=7.0"]
license = {text = "MIT"}
authors = [
    {name = "pytest-isolated contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "build",
    "ruff",
]
test = [
    "pytest-timeout",
]

[project.entry-points.pytest11]
isolated = "pytest_isolated.plugin"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
# Plugin configuration options (examples)
# subprocess_timeout = "300"
# subprocess_capture_passed = false

[tool.setuptools.dynamic]
version = {attr = "pytest_isolated.__version__"}

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]
ignore = [
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value in comparison
    "PLR0912",  # Too many branches (main loop is complex)
    "PLR0915",  # Too many statements (main loop is complex)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004"]  # Allow unused args and magic values in tests
"examples/*" = ["PLW0603"]  # Allow global in examples (demonstrates isolation)
